@@ -14,6 +14,8 @@ $Id$
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Added mousewheel scrolling support in the 2D views.
+
 * [DanielPharos]: Fixed texture positioning tool causing the treeview panel to partially disappear.
 
 * [DanielPharos]: Unwrap texture coordinates on .map export. This allows .bsp compilers to
